<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sebastian.resistencias.MainActivity">}

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/titulo"
        android:textColor="@color/orange"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="194dp"
                android:src="@mipmap/parte_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="71dp" />

                <TextView
                    android:id="@+id/tFranja_1"
                    android:layout_width="10dp"
                    android:layout_height="53dp"
                    android:background="@color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/parte_2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="76dp" />

                <TextView
                    android:id="@+id/tFranja_2"
                    android:layout_width="10dp"
                    android:layout_height="42dp"
                    android:background="@color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/parte_3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="76dp" />

                <TextView
                    android:id="@+id/tFranja_3"
                    android:layout_width="10dp"
                    android:layout_height="42dp"
                    android:background="@color/black" />
            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/parte_4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp" />

                <TextView
                    android:id="@+id/tTolerancia"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:background="@color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.24"
                android:src="@mipmap/parte_5" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/eResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/olivedrab"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/franja_1"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sFranja_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/franja_2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sFranja_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/franja_3"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sFranja_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tolerancia"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sTolerancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCalcular"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/boton_redondo"
            android:text="@string/calcular"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bSalir"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:background="@drawable/boton_redondo_1"
            android:text="@string/salir"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>


